# shiny-hunter

./: .gitignore  AGENT.md  CROSS_PLATFORM_GUIDE.md  Count.txt  README.md  embedded_app.py  main.py  pyproject.toml  requirements-old.txt  requirements.txt  settings_demo.py  shiny_hunt_gui.py  shinyhunter_config.json  styles.py  test_cross_platform.py  test_input_handler.py
src/shinyhunter/: __init__.py  config.py  cross_platform_app.py  embedded_app.py  image_processor.py  input_handler.py  log_config.py  main.py  screenshot_manager.py  shiny_hunt_app.py  shiny_hunt_gui.py  shiny_hunter_controller.py  styles.py
src/shinyhunter/window_management/: __init__.py  base.py  factory.py  fallback_manager.py  pywinctl_manager.py
tests/: __init__.py  test_config.py  test_image_processor.py  test_input_handler.py  test_window_management.py
