[project]
name = "shiny-hunter"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "customtkinter>=5.2.2",
    "opencv-python==4.11.0.86",
    "pillow>=12.2.0",
    "pyautogui>=0.9.54",
    "pygetwindow>=0.0.9",
    "pynput>=1.7.0",
    "pywinctl>=0.4.0",
]

[project.optional-dependencies]
windows = [
    "pywinauto==0.6.9",
    "pywin32==310",
]
